#41 revert unintnetional check-in

--- a/service/src/test/resources/application.properties
+++ b/service/src/test/resources/application.properties
@@ -28,9 +28,9 @@ skills.store.settings.public_groupName2.settingId3=valuec
 skills.authorization.userInfoUri=
 
 # Uncomment to run against local instance of Postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/skills
-spring.datasource.username=postgres
-spring.datasource.password=skillspass
+#spring.datasource.url=jdbc:postgresql://localhost:5432/skills
+#spring.datasource.username=postgres
+#spring.datasource.password=skillspass
 
 # Uncomment be able to connect to in memory H2 DB
 #spring.datasource.url=jdbc:h2:mem:skills
