#48 initial support for dynamic property injection into custom headers/footers

--- a/service/src/main/resources/application.yml
+++ b/service/src/main/resources/application.yml
@@ -79,6 +79,8 @@ skills:
   clientLibVersion: @maven.build.timestamp@
   config:
     ui:
+      dashboardVersion: @pom.version@
+      buildTimestamp: @maven.build.timestamp@
       minimumSubjectPoints: 100
       minimumProjectPoints: 100
       descriptionMaxLength: 2000
