--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -19,11 +19,13 @@ on:
     paths-ignore:
       - 'README.md'
       - '.github/workflows/build-and-test-postgres.yml'
+      - '.github/workflows/build-and-test-redis.yml'
       - '.gitlab-ci.yml'
   pull_request:
     paths-ignore:
       - 'README.md'
       - '.github/workflows/build-and-test-postgres.yml'
+      - '.github/workflows/build-and-test-redis.yml'
       - '.gitlab-ci.yml'
 
 jobs:
