#51: support storing HttpSession in Redis - CI

--- a/.github/workflows/build-and-test-postgres.yml
+++ b/.github/workflows/build-and-test-postgres.yml
@@ -15,8 +15,15 @@
 name: Test against PostgreSQL
 
 on:
-  schedule:
-   - cron: '0 5 * * *'
+  push:
+    paths-ignore:
+      - 'README.md'
+  pull_request:
+    paths-ignore:
+      - 'README.md'
+#on:
+#  schedule:
+#   - cron: '0 5 * * *'
 
 
 jobs:
