#53: PostgreSQL Cypress CI were not running against PostgreSQL

--- a/.github/workflows/build-and-test-postgres.yml
+++ b/.github/workflows/build-and-test-postgres.yml
@@ -87,6 +87,7 @@ jobs:
       run: |
         cd e2e-tests
         npm install
+        npm run backend:dropAllDBTables:postgres
         npm run cyServices:start:skills-service:postgresql
         npm run cyServices:start:client-display
         npm run cy:run:postgres
