#67 increasing dependency  versions, license checking failing, WIP

--- a/call-stack-profiler/pom.xml
+++ b/call-stack-profiler/pom.xml
@@ -238,7 +238,7 @@
                             <licenseMerges>
                                 <licenseMerge>The Apache Software License, Version 2.0|Apache License, Version 2.0</licenseMerge>
                                 <licenseMerge>Eclipse Public License - Version 1.0|Eclipse Public License 1.0</licenseMerge>
-                                <licenseMerge>The 3-Clause BSD License|New BSD License</licenseMerge>
+                                <licenseMerge>The 3-Clause BSD License|New BSD License|BSD Licence 3</licenseMerge>
                             </licenseMerges>
                         </configuration>
                     </execution>
