--- a/service/pom.xml
+++ b/service/pom.xml
@@ -445,6 +445,8 @@
                                 <includedLicense>The MIT License</includedLicense>
                                 <includedLicense>The GNU General Public License (GPL) Version 2 with the Classpath Exception</includedLicense>
                                 <includedLicense>Eclipse Public License - Version 1.0</includedLicense>
+                                <includedLicense>Eclipse Public License - Version 2.0</includedLicense>
+                                <includedLicense>Eclipse Distribution License - Version 1.0</includedLicense>
                                 <includedLicense>Dual license: Common Development and Distribution License 1.1 (CDDL-1.1) and The GNU General Public License (GPL) Version 2</includedLicense>
                                 <includedLicense>Common Development and Distribution License 1.1 (CDDL-1.1) + The GNU General Public License (GPL) Version 2</includedLicense>
                                 <includedLicense>Common Development and Distribution License 1.1 (CDDL-1.1) + The GNU General Public License (GPL) Version 2 with the Classpath Exception</includedLicense>
@@ -489,6 +491,8 @@
                                 <licenseMerge>Common Development and Distribution License (CDDL) + The GNU General Public License (GPL) Version 2 with the Classpath Exception|CDDL + GPLv2 with classpath exception</licenseMerge>
                                 <licenseMerge>The GNU General Public License (GPL) Version 2 with FOSS exception|The GNU General Public License, v2 with FOSS exception</licenseMerge>
                                 <licenseMerge>Mozilla Public License, Version 2.0 or Eclipse Public License - Version 1.0|MPL 2.0 or EPL 1.0</licenseMerge>
+                                <licenseMerge>Eclipse Public License - Version 2.0|Eclipse Public License v. 2.0</licenseMerge>
+                                <licenseMerge>Eclipse Distribution License - Version 1.0|EDL 1.0|Eclipse Distribution License v. 1.0|Eclipse Distribution License - v 1.0</licenseMerge>
                             </licenseMerges>
                         </configuration>
                     </execution>
