#73: upgraded openjdk to 14.0.2

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,7 +1,8 @@
-FROM openjdk:13-alpine
+FROM openjdk:14.0.2-slim-buster
 
 # install netcat so start script can use nc command to wait for DB to come up
-RUN apk update && apk add netcat-openbsd
+RUN apt-get update
+RUN apt-get -y install netcat-openbsd
 
 ARG BUILD_DATE
 ARG VERSION
