--- a/client-display/package.json
+++ b/client-display/package.json
@@ -18,50 +18,50 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "5.11.2",
-    "animate.css": "3.7.2",
-    "apexcharts": "3.8.6",
-    "axios": "0.19.0",
-    "axios-auth-refresh": "1.0.7",
-    "bootstrap": "4.3.1",
+    "@fortawesome/fontawesome-free": "5.14.0",
+    "animate.css": "4.1.1",
+    "apexcharts": "3.20.1",
+    "axios": "0.20.0",
+    "axios-auth-refresh": "3.0.0",
+    "bootstrap": "4.5.2",
     "dompurify": "2.0.15",
     "lodash": "4.17.20",
-    "marked": "0.7.0",
+    "marked": "1.1.1",
     "material-icons": "0.3.1",
     "node-emoji": "1.10.0",
     "numeral": "2.0.6",
-    "postmate": "1.5.1",
+    "postmate": "1.5.2",
     "q": "1.5.1",
     "tinycolor2": "1.4.1",
-    "url-search-params-polyfill": "7.0.0",
+    "url-search-params-polyfill": "8.1.0",
     "vis": "4.21.0",
-    "vue": "2.6.10",
-    "vue-apexcharts": "1.5.0",
-    "vue-js-toggle-button": "1.3.2",
+    "vue": "2.6.12",
+    "vue-apexcharts": "1.6.0",
+    "vue-js-toggle-button": "1.3.3",
     "vue-moment": "4.1.0",
-    "vue-radial-progress": "0.2.10",
-    "vue-router": "3.0.6",
-    "vue-simple-progress": "1.1.0",
-    "vue-simple-spinner": "1.2.8",
-    "vuex": "3.1.1"
+    "vue-radial-progress": "0.3.2",
+    "vue-router": "3.4.3",
+    "vue-simple-progress": "1.1.1",
+    "vue-simple-spinner": "1.2.10",
+    "vuex": "3.5.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "4.1.0",
-    "@vue/cli-plugin-eslint": "4.1.0",
-    "@vue/cli-plugin-unit-jest": "4.1.0",
-    "@vue/cli-service": "4.1.0",
-    "@vue/eslint-config-airbnb": "4.0.1",
-    "@vue/test-utils": "1.0.0-beta.29",
+    "@vue/cli-plugin-babel": "4.5.5",
+    "@vue/cli-plugin-eslint": "4.5.5",
+    "@vue/cli-plugin-unit-jest": "4.5.5",
+    "@vue/cli-service": "4.5.5",
+    "@vue/eslint-config-airbnb": "5.1.0",
+    "@vue/test-utils": "1.1.0",
     "babel-core": "7.0.0-bridge.0",
-    "babel-eslint": "10.0.3",
-    "babel-jest": "24.9.0",
-    "eslint": "5.16.0",
-    "eslint-plugin-vue": "5.0.0",
+    "babel-eslint": "10.1.0",
+    "babel-jest": "26.3.0",
+    "eslint": "7.8.1",
+    "eslint-plugin-vue": "6.2.2",
     "license-check-and-add": "3.0.4",
     "license-checker": "25.0.1",
     "node-sass": "4.14.1",
-    "sass-loader": "8.0.0",
-    "vue-template-compiler": "2.6.10"
+    "sass-loader": "10.0.2",
+    "vue-template-compiler": "2.6.12"
   },
   "peerDependencies": {
     "font-awesome": "4.7.0"
