--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -17,55 +17,56 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "5.11.2",
+    "@fortawesome/fontawesome-free": "5.14.0",
     "@skilltree/skills-client-vue": "3.0.0",
-    "animate.css": "3.7.2",
-    "apexcharts": "3.8.6",
-    "axios": "0.19.2",
+    "animate.css": "4.1.1",
+    "apexcharts": "3.20.1",
+    "axios": "0.20.0",
     "babel-polyfill": "6.26.0",
-    "bootstrap": "4.3.1",
-    "bootstrap-vue": "2.0.2",
+    "bootstrap": "4.5.2",
+    "bootstrap-vue": "2.16.0",
+    "core-js": "3.6.5",
     "dompurify": "2.0.15",
     "enquire.js": "2.1.6",
     "font-awesome-picker": "2.0.0",
     "lodash.debounce": "4.0.8",
-    "marked": "0.7.0",
+    "marked": "1.1.1",
     "matchmedia-polyfill": "0.3.2",
     "material-icons": "0.3.1",
-    "moment": "2.24.0",
+    "moment": "2.27.0",
     "node-emoji": "1.10.0",
     "numeral": "2.0.6",
-    "sockjs-client": "1.4.0",
+    "sockjs-client": "1.5.0",
     "vee-validate": "2.2.15",
     "vis": "4.21.0",
-    "vue": "2.6.10",
-    "vue-apexcharts": "1.5.0",
+    "vue": "2.6.12",
+    "vue-apexcharts": "1.6.0",
     "vue-multiselect": "2.1.6",
-    "vue-router": "3.1.3",
-    "vue-scrollto": "2.17.1",
-    "vue-tables-2": "1.4.70",
-    "vue-virtual-scroll-list": "1.4.2",
+    "vue-router": "3.4.3",
+    "vue-scrollto": "2.18.2",
+    "vue-tables-2": "1.5.46",
+    "vue-virtual-scroll-list": "2.3.1",
     "vuejs-datepicker": "1.6.2",
-    "vuex": "3.1.1",
+    "vuex": "3.5.1",
     "webstomp-client": "1.2.6"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "3.11.0",
-    "@vue/cli-plugin-e2e-nightwatch": "3.11.0",
-    "@vue/cli-plugin-eslint": "3.11.0",
-    "@vue/cli-plugin-unit-jest": "3.11.0",
-    "@vue/cli-service": "3.11.0",
-    "@vue/eslint-config-airbnb": "4.0.1",
-    "@vue/test-utils": "1.0.0-beta.29",
+    "@vue/cli-plugin-babel": "4.5.5",
+    "@vue/cli-plugin-e2e-nightwatch": "4.5.5",
+    "@vue/cli-plugin-eslint": "4.5.5",
+    "@vue/cli-plugin-unit-jest": "4.5.5",
+    "@vue/cli-service": "4.5.5",
+    "@vue/eslint-config-airbnb": "5.1.0",
+    "@vue/test-utils": "1.1.0",
     "babel-core": "7.0.0-bridge.0",
-    "babel-eslint": "10.0.3",
-    "babel-jest": "24.9.0",
-    "eslint": "6.5.0",
-    "eslint-plugin-vue": "5.2.3",
+    "babel-eslint": "10.1.0",
+    "babel-jest": "26.3.0",
+    "eslint": "7.8.1",
+    "eslint-plugin-vue": "6.2.2",
     "license-check-and-add": "3.0.4",
     "license-checker": "25.0.1",
     "node-sass": "4.14.1",
-    "sass-loader": "8.0.0",
-    "vue-template-compiler": "2.6.10"
+    "sass-loader": "10.0.2",
+    "vue-template-compiler": "2.6.12"
   }
 }
