#90: disabled eslint for SectionHelper.js, this file will be OBE by metrics re-write; removed build dir, how is that committed??

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,5 @@ service/src/main/resources/public/**
 .history
 /e2e-tests/cypress/screenshots/
 /e2e-tests/cypress/snapshots/
+
+/dashboard/build/
