#99 - adding backend support for skills-client lib logging. - WIP
(cherry picked from commit ce8804b988c5ec32fc77318909e1b64e1006f659)

--- a/service/src/main/resources/application.yml
+++ b/service/src/main/resources/application.yml
@@ -114,6 +114,9 @@ skills:
       maxNumPerformToCompletion: 10000
       maxNumPointIncrementMaxOccurrences: 999
       userSuggestOptions:
+    client:
+      loggingEnabled: false
+      loggingLevel: DEBUG
   profiles:
     active: default
 #  level:
