--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -20,7 +20,7 @@
     "@fortawesome/fontawesome-free": "5.14.0",
     "@skilltree/skills-client-vue": "3.0.0",
     "animate.css": "4.1.1",
-    "apexcharts": "3.20.1",
+    "apexcharts": "3.20.2",
     "axios": "0.20.0",
     "babel-polyfill": "6.26.0",
     "bootstrap": "4.5.2",
@@ -51,14 +51,14 @@
     "webstomp-client": "1.2.6"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "4.5.5",
-    "@vue/cli-plugin-e2e-nightwatch": "4.5.5",
-    "@vue/cli-plugin-eslint": "4.5.5",
-    "@vue/cli-plugin-unit-jest": "4.5.5",
-    "@vue/cli-service": "4.5.5",
+    "@vue/cli-plugin-babel": "4.5.6",
+    "@vue/cli-plugin-e2e-nightwatch": "4.5.6",
+    "@vue/cli-plugin-eslint": "4.5.6",
+    "@vue/cli-plugin-unit-jest": "4.5.6",
+    "@vue/cli-service": "4.5.6",
     "@vue/eslint-config-airbnb": "5.1.0",
     "@vue/test-utils": "1.1.0",
-    "babel-core": "7.0.0-bridge.0",
+    "@babel/core": "7.11.6",
     "babel-eslint": "10.1.0",
     "babel-jest": "26.3.0",
     "eslint": "7.8.1",
