#95: record cypress tests; temporarily skip maven tests

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -65,15 +65,25 @@ jobs:
           ${{ runner.os }}-maven-
 
     - name: Build skills-service
-      run: mvn --batch-mode install
+      run: mvn --batch-mode install -DskipTests
 
-    - name: Run Cypress tests
+    - name: Prep Services for Cypress tests
       run: |
         cd e2e-tests
         npm install
         npm run cyServices:start
-        npm run cy:run
         cd ..
+
+    - name: Run Cypress tests
+      uses: cypress-io/github-action@v2
+      with:
+        project: ./e2e-tests
+        record: true
+      env:
+        # pass the Dashboard record key as an environment variable
+        CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+        # pass GitHub token to allow accurately detecting a build vs a re-run build
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: upload result artifacts
       if: ${{ always() }}
