--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -77,7 +77,7 @@ jobs:
     - name: Run Cypress tests
       uses: cypress-io/github-action@v2
       with:
-        project: ./e2e-tests
+        working-directory: e2e-tests
         record: true
       env:
         # pass the Dashboard record key as an environment variable
@@ -101,86 +101,86 @@ jobs:
         name: service jar
         path: ./service/target/*.jar
 
-  service-against-postgresql:
-    runs-on: ubuntu-latest
-
-    services:
-      postgres:
-        image: postgres
-        # Provide the password for postgres
-        env:
-          POSTGRES_PASSWORD: skillsPassword
-          POSTGRES_DB: skills
-        # Set health checks to wait until postgres has started
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-        ports:
-          # Maps tcp port 5432 on service container to the host
-          - 5432:5432
-
-    steps:
-      - uses: actions/checkout@v2
-
-      - uses: actions/setup-node@v2-beta
-        with:
-          node-version: '12'
-
-      - name: Set up Maven
-        uses: stCarolas/setup-maven@v3
-        with:
-          maven-version: 3.6.3
-
-      - uses: actions/setup-java@v1
-        with:
-          java-version: '11.X.X' # The JDK version to make available on the path.
-
-      - name: Print Versions
-        run: |
-          mvn --version
-          java -version
-
-      - name: Cache local Maven repository
-        uses: actions/cache@v2
-        with:
-          path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-maven-
-
-      - name: Build skills-service
-        run: mvn --batch-mode test -Dspring.datasource.url=jdbc:postgresql://localhost:5432/skills -Dspring.datasource.username=postgres -Dspring.datasource.password=skillsPassword
-
-      - name: upload result artifacts
-        if: ${{ always() }}
-        uses: actions/upload-artifact@v2
-        with:
-          name: CI result artifacts
-          path: |
-            ./service/target/*.log
-            ./e2e-tests/cypress
-            ./e2e-tests/logs
-
-  publish-snapshot-docker-image:
-    runs-on: ubuntu-latest
-    if: github.event_name == 'push' && github.ref == 'refs/heads/master'
-    needs: [service-and-ui-against-h2, service-against-postgresql]
-    steps:
-      - uses: actions/checkout@v2
-
-      - uses: actions/download-artifact@v2
-        with:
-          name: service jar
-          path: ./service/target/
-
-      - name: Build image
-        env:
-          docker_username: ${{ secrets.DOCKERUSERNAME }}
-          docker_password: ${{ secrets.DOCKERPASSWORD }}
-        run: |
-          cd docker
-          bash build-and-push.sh "skilltree/skills-service-ci"
+#  service-against-postgresql:
+#    runs-on: ubuntu-latest
+#
+#    services:
+#      postgres:
+#        image: postgres
+#        # Provide the password for postgres
+#        env:
+#          POSTGRES_PASSWORD: skillsPassword
+#          POSTGRES_DB: skills
+#        # Set health checks to wait until postgres has started
+#        options: >-
+#          --health-cmd pg_isready
+#          --health-interval 10s
+#          --health-timeout 5s
+#          --health-retries 5
+#        ports:
+#          # Maps tcp port 5432 on service container to the host
+#          - 5432:5432
+#
+#    steps:
+#      - uses: actions/checkout@v2
+#
+#      - uses: actions/setup-node@v2-beta
+#        with:
+#          node-version: '12'
+#
+#      - name: Set up Maven
+#        uses: stCarolas/setup-maven@v3
+#        with:
+#          maven-version: 3.6.3
+#
+#      - uses: actions/setup-java@v1
+#        with:
+#          java-version: '11.X.X' # The JDK version to make available on the path.
+#
+#      - name: Print Versions
+#        run: |
+#          mvn --version
+#          java -version
+#
+#      - name: Cache local Maven repository
+#        uses: actions/cache@v2
+#        with:
+#          path: ~/.m2/repository
+#          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+#          restore-keys: |
+#            ${{ runner.os }}-maven-
+#
+#      - name: Build skills-service
+#        run: mvn --batch-mode test -Dspring.datasource.url=jdbc:postgresql://localhost:5432/skills -Dspring.datasource.username=postgres -Dspring.datasource.password=skillsPassword
+#
+#      - name: upload result artifacts
+#        if: ${{ always() }}
+#        uses: actions/upload-artifact@v2
+#        with:
+#          name: CI result artifacts
+#          path: |
+#            ./service/target/*.log
+#            ./e2e-tests/cypress
+#            ./e2e-tests/logs
+#
+#  publish-snapshot-docker-image:
+#    runs-on: ubuntu-latest
+#    if: github.event_name == 'push' && github.ref == 'refs/heads/master'
+#    needs: [service-and-ui-against-h2, service-against-postgresql]
+#    steps:
+#      - uses: actions/checkout@v2
+#
+#      - uses: actions/download-artifact@v2
+#        with:
+#          name: service jar
+#          path: ./service/target/
+#
+#      - name: Build image
+#        env:
+#          docker_username: ${{ secrets.DOCKERUSERNAME }}
+#          docker_password: ${{ secrets.DOCKERPASSWORD }}
+#        run: |
+#          cd docker
+#          bash build-and-push.sh "skilltree/skills-service-ci"
 
 
