--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -29,8 +29,67 @@ on:
       - '.gitlab-ci.yml'
 
 jobs:
-  service-and-ui-against-h2:
+  service-against-h2:
     runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - uses: actions/setup-node@v2-beta
+        with:
+          node-version: '12'
+
+      - name: Set up Maven
+        uses: stCarolas/setup-maven@v3
+        with:
+          maven-version: 3.6.3
+
+      - uses: actions/setup-java@v1
+        with:
+          java-version: '11.X.X' # The JDK version to make available on the path.
+
+      - name: Print Versions
+        run: |
+          mvn --version
+          java -version
+
+      - name: Cache local Maven repository
+        uses: actions/cache@v2
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven-
+
+      - name: Build skills-service
+        run: mvn --batch-mode install -DskipTests
+
+      - name: upload result artifacts
+        if: ${{ always() }}
+        uses: actions/upload-artifact@v2
+        with:
+          name: CI result artifacts
+          path: |
+            ./service/target/*.log
+
+      - name: upload service jar
+        uses: actions/upload-artifact@v2
+        with:
+          name: service jar
+          path: ./service/target/*.jar
+
+  ui-tests-against-h2:
+    runs-on: ubuntu-latest
+    needs: [service-against-h2]
+    strategy:
+      # when one test fails, DO NOT cancel the other
+      # containers, because this will kill Cypress processes
+      # leaving the Dashboard hanging ...
+      # https://github.com/cypress-io/github-action/issues/48
+      fail-fast: false
+      matrix:
+        # run 3 copies of the current job in parallel
+        containers: [1, 2, 3]
 
     steps:
     - name: Install Emoji Support
@@ -56,16 +115,10 @@ jobs:
         mvn --version
         java -version
 
-    - name: Cache local Maven repository
-      uses: actions/cache@v2
+    - uses: actions/download-artifact@v2
       with:
-        path: ~/.m2/repository
-        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-        restore-keys: |
-          ${{ runner.os }}-maven-
-
-    - name: Build skills-service
-      run: mvn --batch-mode install -DskipTests
+        name: service jar
+        path: ./service/target/
 
     - name: Prep Services for Cypress tests
       run: |
@@ -79,6 +132,8 @@ jobs:
       with:
         working-directory: e2e-tests
         record: true
+        parallel: true
+        group: 'skills-service tests'
       env:
         # pass the Dashboard record key as an environment variable
         CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
