#95: let's try running cypress tests in parallel

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -62,7 +62,7 @@ jobs:
             ${{ runner.os }}-maven-
 
       - name: Build skills-service
-        run: mvn --batch-mode install -DskipTests
+        run: mvn --batch-mode install
 
       - name: upload result artifacts
         if: ${{ always() }}
