--- a/call-stack-profiler/pom.xml
+++ b/call-stack-profiler/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <artifactId>skills-service-parent</artifactId>
         <groupId>skill-tree</groupId>
-        <version>1.2.1-SNAPSHOT</version>
+        <version>1.2.1</version>
     </parent>
 
     <artifactId>call-stack-profiler</artifactId>
