--- a/docker/skills-stomp-broker/Dockerfile
+++ b/docker/skills-stomp-broker/Dockerfile
@@ -11,11 +11,26 @@ RUN sed -i 's/exec "$@"/\
 
 ARG BUILD_DATE
 ARG VERSION
+ARG VCS_REF=unspecified
 
-LABEL classification="U" \
-    description="RabbitMQ STOMP broker used to support Skills as a Service web socket connections in a clustered environment" \
-    maintainer="Skills as a Service Team" \
-    run="docker run --name skills-stomp-broker -d -p 15672:15672 -p 61613:61613 <registry location>/skills-stomp-broker" \
-    source="Skills as a Service platform" \
-    version="$VERSION" \
-    buildTime="$BUILD_DATE"
+LABEL org.label-schema.build-date=$BUILD_DATE
+LABEL org.label-schema.license=Apache-2.0
+LABEL org.label-schema.name=SkillTree
+LABEL org.label-schema.schema-version=$VERSION
+LABEL org.label-schema.url=https://github.com/NationalSecurityAgency/skills-service
+LABEL org.label-schema.usage=https://code.nsa.gov/skills-docs/
+LABEL org.label-schema.vcs-ref=$VCS_REF
+LABEL org.label-schema.vendor=SkillTree
+LABEL org.label-schema.vcs-url=https://github.com/NationalSecurityAgency/skills-service
+LABEL org.label-schema.vendor=SkillTree
+LABEL org.label-schema.version=7.8.0
+
+LABEL org.opencontainers.image.created=$BUILD_DATE
+LABEL org.opencontainers.image.documentation=https://code.nsa.gov/skills-docs/
+LABEL org.opencontainers.image.licenses=Apache-2.0
+LABEL org.opencontainers.image.revision=$VCS_REF
+LABEL org.opencontainers.image.source=https://github.com/NationalSecurityAgency/skills-service
+LABEL org.opencontainers.image.title=SkillTree
+LABEL org.opencontainers.image.url=https://github.com/NationalSecurityAgency/skills-service
+LABEL org.opencontainers.image.vendor=SkillTree
+LABEL org.opencontainers.image.version=$VERSION
