--- a/.github/workflows/build-and-test-rabbitmq.yml
+++ b/.github/workflows/build-and-test-rabbitmq.yml
@@ -32,7 +32,7 @@ jobs:
 
     services:
       rabbitmq:
-        image: skilltree/skills-stomp-broker
+        image: skilltree/skills-stomp-broker:1.0.0
         ports:
           # Maps port 15672 and 61613 on service container to the host
           - 15672:15672
