--- a/client-display/package.json
+++ b/client-display/package.json
@@ -11,7 +11,7 @@
     "licenseHeaderCheck": "license-check-and-add check -f '../license-add/license-add-config.json'",
     "licenseHeaderAdd": "license-check-and-add add -f ../license-add/license-add-config.json",
     "licenseCheck": "npm run licenseHeaderCheck && npm run licenseDepCheck",
-    "build": "npm run licenseCheck && vue-cli-service build",
+    "build": "npm run licenseCheck && npm run test:unit && vue-cli-service build",
     "build-lib": "NODE_ENV='production' && rm -rfv dist && vue-cli-service build --target lib --name userSkills './src/index.js'",
     "deploy": "npm run build && rm -rf ../backend/src/main/resources/public/static/clientPortal && cp -rT dist ../backend/src/main/resources/public/static/clientPortal && cp -rT dist ../backend/target/classes/public/static/clientPortal ",
     "lint": "vue-cli-service lint",
@@ -46,19 +46,20 @@
     "vuex": "3.5.1"
   },
   "devDependencies": {
+    "@babel/core": "7.11.6",
     "@vue/cli-plugin-babel": "4.5.6",
     "@vue/cli-plugin-eslint": "4.5.6",
     "@vue/cli-plugin-unit-jest": "4.5.6",
     "@vue/cli-service": "4.5.6",
     "@vue/eslint-config-airbnb": "5.1.0",
     "@vue/test-utils": "1.1.0",
-    "@babel/core": "7.11.6",
     "babel-eslint": "10.1.0",
     "babel-jest": "26.3.0",
     "eslint": "7.8.1",
     "eslint-plugin-vue": "6.2.2",
     "license-check-and-add": "3.0.4",
     "license-checker": "25.0.1",
+    "moment-timezone": "0.5.31",
     "node-sass": "4.14.1",
     "sass-loader": "10.0.2",
     "vue-template-compiler": "2.6.12"
