--- a/.github/workflows/build-and-test-redis.yml
+++ b/.github/workflows/build-and-test-redis.yml
@@ -14,16 +14,16 @@
 
 name: Test storing HttpSession in Redis
 
-#on:
-#  push:
-#    paths-ignore:
-#      - 'README.md'
-#  pull_request:
-#    paths-ignore:
-#      - 'README.md'
 on:
-  schedule:
-   - cron: '0 6 * * *'
+  push:
+    paths-ignore:
+      - 'README.md'
+  pull_request:
+    paths-ignore:
+      - 'README.md'
+#on:
+#  schedule:
+#   - cron: '0 6 * * *'
 
 
 jobs:
@@ -78,14 +78,26 @@ jobs:
     - name: Build skills-service
       run: mvn --batch-mode install -DskipTests
 
-    - name: Run Cypress tests
+    - name: Start services for Cypress tests
       run: |
         cd e2e-tests
         npm install
         npm run cyServices:start:skills-service:redis
         npm run cyServices:start:client-display
-        npm run cy:run
         cd ..
+
+    - name: Run Cypress tests
+      uses: cypress-io/github-action@v2
+      with:
+        working-directory: e2e-tests
+        record: true
+        parallel: false
+        group: 'skills-service with Redis'
+      env:
+        # pass the Dashboard record key as an environment variable
+        CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+        # pass GitHub token to allow accurately detecting a build vs a re-run build
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: upload result artifacts
       if: ${{ always() }}
