--- a/.github/workflows/build-and-test-postgres.yml
+++ b/.github/workflows/build-and-test-postgres.yml
@@ -14,16 +14,16 @@
 
 name: Test against PostgreSQL
 
-#on:
-#  push:
-#    paths-ignore:
-#      - 'README.md'
-#  pull_request:
-#    paths-ignore:
-#      - 'README.md'
 on:
-  schedule:
-   - cron: '0 5 * * *'
+  push:
+    paths-ignore:
+      - 'README.md'
+  pull_request:
+    paths-ignore:
+      - 'README.md'
+#on:
+#  schedule:
+#   - cron: '0 5 * * *'
 
 
 jobs:
@@ -83,15 +83,27 @@ jobs:
     - name: Build skills-service
       run: mvn --batch-mode install -Dspring.datasource.url=jdbc:postgresql://localhost:5432/skills -Dspring.datasource.username=postgres -Dspring.datasource.password=skillsPassword
 
-    - name: Run Cypress tests
+    - name: Start Services for Cypress tests
       run: |
         cd e2e-tests
         npm install
         npm run backend:dropAllDBTables:postgres
         npm run cyServices:start:skills-service:postgresql
         npm run cyServices:start:client-display
-        npm run cy:run:postgres
         cd ..
+
+    - name: Run Cypress tests
+      uses: cypress-io/github-action@v2
+      with:
+        working-directory: e2e-tests
+        record: true
+        parallel: false
+        group: 'skills-service against postgres'
+      env:
+        # pass the Dashboard record key as an environment variable
+        CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+        # pass GitHub token to allow accurately detecting a build vs a re-run build
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: upload result artifacts
       if: ${{ always() }}
