--- a/.github/workflows/build-and-test-postgres.yml
+++ b/.github/workflows/build-and-test-postgres.yml
@@ -99,6 +99,7 @@ jobs:
         record: true
         parallel: false
         group: 'skills-service against postgres'
+        env: db=postgres
       env:
         # pass the Dashboard record key as an environment variable
         CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
