--- a/service/src/test/resources/application-pki.properties
+++ b/service/src/test/resources/application-pki.properties
@@ -1,3 +1,18 @@
+#
+# Copyright 2020 SkillTree
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#     https://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+#
 logging.level.skills.intTests.utils.WSHelper=warn
 logging.level.org.apache.http.client.protocol.ResponseProcessCookies=fatal
 skills.config.ui.paragraphValidationRegex=^(?i)(?s)((?!jabberwocky).)*$
@@ -9,10 +24,10 @@ skills.store.settings.public_groupName1.settingId1=valuea
 skills.store.settings.public_groupName1.settingId2=valueb
 skills.store.settings.public_groupName2.settingId3=valuec
 
-server.ssl.key-store=/test.skilltree.service.p12
+server.ssl.key-store=classpath:certs/test.skilltree.service.p12
 server.ssl.key-store-password=skillspass
 server.ssl.keyStoreType=PKCS12
-server.ssl.trust-store=/truststore.jks
+server.ssl.trust-store=classpath:certs/truststore.jks
 server.ssl.trust-store-password=skillspass
 server.ssl.trustStoreType=JKS
 server.ssl.enabled=true
@@ -23,11 +38,4 @@ skills.authorization.userInfoUri=https://localhost:8181/userInfo?dn={dn}
 skills.authorization.userQueryUri=https://localhost:8181/userQuery?query={query}
 skills.authorization.userInfoHealthCheckUri=https://localhost:8181/actuator/health
 skills.authorization.authMode=PKI
-- EXTRA_JAVA_OPTS=
--Dskills.disableHostnameVerifier=true
--Djavax.net.ssl.keyStore=/certs/skills-dev-server-bundle.p12
--Djavax.net.ssl.keyStorePassword=changeme
--Djavax.net.ssl.keyStoreType=PKCS12
--Djavax.net.ssl.trustStore=/certs/truststore_greybox.jks
--Djavax.net.ssl.trustStorePassword=changeit
--Djavax.net.ssl.trustStoreType=JKS
+
