--- a/service/pom.xml
+++ b/service/pom.xml
@@ -556,9 +556,7 @@
                         <exclude>**/*.xml</exclude>
                         <exclude>**/*.jks</exclude>
                         <exclude>**/*.ftl</exclude>
-                        <exclude>**/*.p12</exclude>
-                        <exclude>**/*.crt</exclude>
-                        <exclude>**/*.key</exclude>
+                        <exclude>src/test/resource/certs/**</exclude>
                         <exclude>src/main/resources/public/**</exclude>
                         <exclude>src/main/resources/templates/**</exclude>
                         <exclude>**/license/*.properties</exclude>
