#150 - add support for oauth testing to e2e-tests - WIP

--- a/.github/workflows/build-and-test-oauth.yml
+++ b/.github/workflows/build-and-test-oauth.yml
@@ -113,7 +113,8 @@ jobs:
         working-directory: e2e-tests
         record: true
         parallel: false
-        group: 'skills-service with Redis'
+        group: 'skills-service with OAuth'
+        env: db=postgres
       env:
         # pass the Dashboard record key as an environment variable
         CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
