#95: multiple projects metrics - WIP - cleanup and refactor

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -123,8 +123,8 @@ jobs:
       # https://github.com/cypress-io/github-action/issues/48
       fail-fast: false
       matrix:
-        # run 3 copies of the current job in parallel
-        containers: [1, 2, 3]
+        # run 4 copies of the current job in parallel
+        containers: [1, 2, 3, 4]
 
     steps:
     - name: Install Emoji Support
