--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -186,6 +186,7 @@ jobs:
         record: true
         parallel: true
         group: 'skills-service tests'
+        tag: "${{ github.workflow }}"
       env:
         # pass the Dashboard record key as an environment variable
         CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
