--- a/.github/workflows/build-and-test-rabbitmq.yml
+++ b/.github/workflows/build-and-test-rabbitmq.yml
@@ -88,6 +88,7 @@ jobs:
         record: true
         parallel: false
         group: 'skills-service with STOMP using RabbitMQ'
+        tag: "${{ github.workflow }}"
       env:
         # pass the Dashboard record key as an environment variable
         CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
