--- a/.github/workflows/build-and-test-redis.yml
+++ b/.github/workflows/build-and-test-redis.yml
@@ -93,6 +93,7 @@ jobs:
         record: true
         parallel: false
         group: 'skills-service with Redis'
+        tag: "${{ github.workflow }}"
       env:
         # pass the Dashboard record key as an environment variable
         CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
