--- a/.github/workflows/build-and-test-postgres.yml
+++ b/.github/workflows/build-and-test-postgres.yml
@@ -14,16 +14,16 @@
 
 name: Test against PostgreSQL
 
-#on:
-#  push:
-#    paths-ignore:
-#      - 'README.md'
+on:
+  push:
+    paths-ignore:
+      - 'README.md'
 #  pull_request:
 #    paths-ignore:
 #      - 'README.md'
-on:
-  schedule:
-   - cron: '0 5 * * *'
+#on:
+#  schedule:
+#   - cron: '0 5 * * *'
 
 
 jobs:
@@ -58,10 +58,10 @@ jobs:
       with:
         node-version: '14'
 
-    - name: Set up Maven
-      uses: stCarolas/setup-maven@v3
-      with:
-        maven-version: 3.6.3
+#    - name: Set up Maven
+#      uses: stCarolas/setup-maven@v3
+#      with:
+#        maven-version: 3.6.3
 
     - uses: actions/setup-java@v1
       with:
