--- a/.github/workflows/build-and-test-rabbitmq.yml
+++ b/.github/workflows/build-and-test-rabbitmq.yml
@@ -14,16 +14,16 @@
 
 name: Test Web Sockets over STOMP using RabbitMQ
 
-#on:
-#  push:
-#    paths-ignore:
-#      - 'README.md'
+on:
+  push:
+    paths-ignore:
+      - 'README.md'
 #  pull_request:
 #    paths-ignore:
 #      - 'README.md'
-on:
-  schedule:
-   - cron: '0 6 * * *'
+#on:
+#  schedule:
+#   - cron: '0 6 * * *'
 
 
 jobs:
@@ -47,11 +47,6 @@ jobs:
     - uses: actions/setup-node@v2-beta
       with:
         node-version: '14'
-
-    - name: Set up Maven
-      uses: stCarolas/setup-maven@v3
-      with:
-        maven-version: 3.6.3
 
     - uses: actions/setup-java@v1
       with:
