#176 - reverted back to schedule

--- a/.github/workflows/build-and-test-postgres.yml
+++ b/.github/workflows/build-and-test-postgres.yml
@@ -14,16 +14,16 @@
 
 name: Test against PostgreSQL
 
-on:
-  push:
-    paths-ignore:
-      - 'README.md'
+#on:
+#  push:
+#    paths-ignore:
+#      - 'README.md'
 #  pull_request:
 #    paths-ignore:
 #      - 'README.md'
-#on:
-#  schedule:
-#   - cron: '0 5 * * *'
+on:
+  schedule:
+   - cron: '0 5 * * *'
 
 
 jobs:
