#176 - reverted back to schedule

--- a/.github/workflows/build-and-test-ssl.yml
+++ b/.github/workflows/build-and-test-ssl.yml
@@ -20,10 +20,10 @@ on:
 #on:
 #  push:
 #    paths-ignore:
-      - 'README.md'
-      - '.github/workflows/build-and-test-postgres.yml'
-      - '.github/workflows/build-and-test-redis.yml'
-      - '.gitlab-ci.yml'
+#      - 'README.md'
+#      - '.github/workflows/build-and-test-postgres.yml'
+#      - '.github/workflows/build-and-test-redis.yml'
+#      - '.gitlab-ci.yml'
 #  pull_request:
 #    paths-ignore:
 #      - 'README.md'
