#182 create more js chunks, change spring boot to use http2, dynamically import certain routes that aren't used by all dashboard users

--- a/service/src/main/resources/application.yml
+++ b/service/src/main/resources/application.yml
@@ -27,7 +27,7 @@ server:
       timeout: 24h
       persistent: false
   http2:
-    enabled: false
+    enabled: true
   compression:
     enabled: true
     min-response-size: 2048
